examples/test/testpolicy9882.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9882
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key19: value8
      key49: value23
      key7: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value27
      podSelector:
        matchLabels:
          key39: value14
          key31: value13
